# endovelicus

./: .env  .gitignore  Cargo.toml  README.md  SCHEMA.md  TODO.md  package-lock.json  plugins.json  tailwind.config.js
.bruno/: bruno.json
.bruno/Account/: Create.bru  Read.bru
.bruno/Currency/: Create.bru  Delete.bru  Read.bru  Update.bru
.bruno/Plugins/: Create.bru  Get Endpoint.bru  Read.bru
assets/: styles.css
endovelicus-macros/: Cargo.toml
endovelicus-macros/src/: lib.rs
entity/: Cargo.toml  README.md
entity/src/: account.rs  currency.rs  lib.rs  prelude.rs
frontend/: index.html  package-lock.json  package.json
frontend-nux/: .eslintrc.js  app.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  theme.d.ts
frontend-nux/components/: AppBar.vue  LdsSpinner.vue  LoadingScreen.vue  SideBar.vue  SvgLogo.vue
frontend-nux/components/theme/: ThemeMenu.vue  ThemeMenuInner.vue  ThemeSettings.vue
frontend-nux/layouts/: default.vue
frontend-nux/models/: CurrencyDto.ts
frontend-nux/pages/: currency.vue  home.vue  index.vue  settings.vue
frontend-nux/plugins/: vuetify.ts
frontend-nux/services/: RemoteService.ts
frontend-nux/stores/: appearance.ts  drawer.ts
frontend/src/: App.vue  components.d.ts  theme.d.ts  typed-router.d.ts
frontend/src/components/: HelloWorld.vue  Logo.vue  NavBar.vue  SideBar.vue  ThemeMenu.vue  sidebar.ts
frontend/src/models/: CurrencyDto.ts
frontend/src/pages/: currency.vue  settings.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: RemoteService.ts
frontend/src/stores/: appearance.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20240630_013307_create_table.rs
src/: error.rs  main.rs
src/api/: account.rs  currency.rs  error.rs  json.rs  mod.rs  plugin.rs
src/api/plugin/: api.rs  endpoint.rs  mod.rs
src/data/: account.rs  currency.rs  mod.rs
src/db/: mod.rs  sqlite.rs
src/frontend/: mod.rs
src/models/: currency.rs  mod.rs
src/plugin/: mod.rs  store.rs
src/plugins/: export.rs  mod.rs  ser.rs  store.rs
templates/: globals.css  layout.html.tera  navbar.html.tera
templates/currency/: index.html.tera
templates/transaction/: index.html.tera
