[package]
name = "endovelicus"
version = "0.1.0"
edition = "2021"

[env]


[dependencies]
axum = "0.7.5"
futures = "0.3.30"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "any", "postgres"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
