[package]
name = "endovelicus"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "endovelicus-macros", "entity", "migration"]
[workspace.dependencies]
endovelicus-macros = { path = "endovelicus-macros"}
serde = "1.0"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
endovelicus-macros = { path = "endovelicus-macros"}

axum = {version = "0.7", features = ["macros"]}
dotenvy = "0.15"
futures = "0.3.30"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
serde = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "any", "postgres"] }
tokio = { version = "1.38", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
extism = "1.4"
serde_json = "1.0.120"
anyhow = "1.0"
thiserror = "1.0"
arc-swap = { version = "1.7.1", features = ["serde"] }
once_cell = "1.19.0"

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
nonstandard_style = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "allow"
